Revision history for Spreadsheet-ParseXLSX

{{$NEXT}}

0.13  2014-01-29
      - support locked and hidden cells (Tux, #15)
      - "default color" is now returned as undef, rather than assuming it's
        always black (Tux, #15)

0.12  2013-12-09
      - support underline and strikethrough font properties (matrot, #14)

0.11  2013-11-13
      - fix $workbook->get_filename (masonik, #13)

0.10  2013-11-06
      - support inlineStr cells (David Gang, #12)

0.09  2013-10-09
      - fix getting cell values for cells with rich text contents
        (merrilymeredith, #11)
      - support merged cells (rolaf, #10)
      - row_range and col_range for empty worksheets (rolaf, #8)
      - support error cells (rolaf, #7)
      - support worksheets with a range selection

0.08  2013-09-10
      - fix string lookups when the workbook contains cells with complicated
        formatting (Drokaten, #6)
      - fix warnings during parsing when using -w

0.07  2013-09-05
      - support boolean and string format cells (Drokaten, #6)
      - provide a working minimum version for Spreadsheet::ParseExcel (rjbs)

0.06  2013-08-29
      - fix conversion between cell and column index for large column indices

0.05  2013-07-31
      - more fixes for xlsx format variations (mikaelg79, #5)

0.04  2013-07-31
      - fix spreadsheets that only have a single cell (servuscmj, #2)
      - fixes for some variations in how xlsx files are generated (tophopstop,
        #3)
      - fix spreadsheets with more than 26 columns (tophopstop, #4)

0.03  2013-07-26
      - fix exception when the 'selection' node doesn't exist (reported by
        melick, #1)

0.02  2013-07-17
      - fix bugtracker link

0.01  2013-07-16
      - Initial release